--- a/plantillas/dashboard/product.html
+++ b/plantillas/dashboard/product.html
@@ -1,80 +1,51 @@
 {% extends 'partials/base.html'  %}
 {% block title %} Productos {% endblock %}
+{% load crispy_forms_tags %}
 
 {% block content %} 
 {% include 'partials/topnav.html' %}
+
     <!--Table-->
     <div class="container">
         <div class="row my-4">
             <div class="col-md-4">
                 <div class="border bg-white p-3">
-                    <h4>Add Products</h4>
+                    <h4>Agregar Productos</h4>
                     <hr>
-                    <form action="">
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Name</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Quantity</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="form-group ">
-                            <label for="inputState">Category</label>
-                            <select id="inputState" class="form-control">
-                                <option selected>Choose...</option>
-                                <option>...</option>
-                            </select>
-                        </div>
-
-                        <input class="btn btn-success btn-block" type="submit" value="Add Product">
+                    <form method="post">
+                        {% csrf_token %}
+                        {{form|crispy }} <br>
+                        <input class="btn btn-success btn-block " type="submit" value="Add Product">
 
                     </form>
                 </div>
             </div>
-            <div class="col-md-8">
-                <table class="table bg-white">
+            <div class="col-md-8 ">
+                <table class="table bg-white ">
                     <thead class="bg-info">
-                        <tr class="text-white">
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Category</th>
-                            <th scope="col">Quantity</th>
-                            <th scope="col">Activity</th>
+                        <tr class="text-white text-center">
+                            <th scope="col">Serial</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Marca</th>
+                            <th scope="col">Categoría</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="text-center">
+                        {% for item in items %}
                         <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <th scope="row">{{item.serial}}</th>
+                            <td>{{item.nombre}}</td>
+                            <td>{{item.marca}}</td>
+                            <td>{{item.category}}</td>
+                            <td>{{item.cantidad}}</td>
                             <td>
                                 <a class="btn btn-info btn-sm" href="">Edit</a>
                                 <a class="btn btn-danger btn-sm" href="">Delete</a>
                             </td>
                         </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                            <td>
-                                <a class="btn btn-info btn-sm" href="">Edit</a>
-                                <a class="btn btn-danger btn-sm" href="">Delete</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>
-                                <a class="btn btn-info btn-sm" href="">Edit</a>
-                                <a class="btn btn-danger btn-sm" href="">Delete</a>
-                            </td>
-                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
