--- a/plantillas/dashboard/staff.html
+++ b/plantillas/dashboard/staff.html
@@ -12,30 +12,20 @@
                     <thead class="bg-info">
                         <tr class="text-white">
                             <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Telefono</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% for member in members %}
                         <tr>
-                            <th scope="row"><a class="btn btn-info btn-sm" href="">View</a></th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <th scope="row"><a class="btn btn-info btn-sm" href="{% url 'dashboard-staff-detail' member.id %}">View</a></th>
+                            <td>{{member.username}}</td>
+                            <td>{{member.email}}</td>
+                            <td>{{member.perfil.telefono}}</td>
                         </tr>
-                        <tr>
-                            <th scope="row"><a class="btn btn-info btn-sm" href="">View</a></th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <th scope="row"><a class="btn btn-info btn-sm" href="">View</a></th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
