--- a/plantillas/dashboard/staff_detail.html
+++ b/plantillas/dashboard/staff_detail.html
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-8">
-                            <span class="h4"> Profile Information</span>
+                            <span class="h4"> Informacion del Perfil</span>
                             <hr>
                             <table class="table bg-white table-borderless">
                                 <tbody>
