--- a/plantillas/user/profile.html
+++ b/plantillas/user/profile.html
@@ -12,18 +12,18 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header bg-info text-white">
-                        Profile Page
+                        Perfil de Usuario
                     </div>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-8">
-                                <span class="h4"> Profile Information</span> <a class="btn btn-info btn-sm float-right"
-                                    href="{%url 'user-profile-update'%}">Edit</a>
+                                <span class="h4">Informacion del Perfil</span> <a class="btn btn-info btn-sm float-right"
+                                    href="{%url 'user-profile-update'%}">Editar</a>
                                 <hr>
                                 <table class="table bg-white table-borderless">
                                     <tbody>
                                         <tr>
-                                            <th scope="row">Name</th>
+                                            <th scope="row">Nombre</th>
                                             <td>{{user.username }}</td>
                                         </tr>
                                         <tr>
@@ -31,11 +31,11 @@
                                             <td>{{user.email }}</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row">Phone</th>
+                                            <th scope="row">Teléfono</th>
                                             <td>{{user.perfil.telefono}}</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row">Address</th>
+                                            <th scope="row">Dirección</th>
                                             <td>{{user.perfil.direccion}}</td>
                                         </tr>
                                     </tbody>
