--- a/plantillas/user/profile_update.html
+++ b/plantillas/user/profile_update.html
@@ -17,7 +17,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-8">
-                                <span class="h4"> Profile Information</span> 
+                                <span class="h4">Informacion del Perfil</span> 
                                 <hr>
                                 <form method="post" enctype="multipart/form-data">
                                     {{user_form|crispy}}
